--- a/velibnroses/velibnroses/Base.lproj/MainStoryboard.storyboard
+++ b/velibnroses/velibnroses/Base.lproj/MainStoryboard.storyboard
@@ -81,7 +81,7 @@
                                         <rect key="frame" x="216" y="174" width="94" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                        <state key="normal" title="Search" backgroundImage="SearchButtonBg.png">
+                                        <state key="normal" title="Search" backgroundImage="Images/SearchPanel/SPButtonBg.png">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <state key="highlighted">
@@ -102,7 +102,7 @@
                                         <rect key="frame" x="271" y="-1" width="44" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <state key="normal" image="MyLocation.png">
+                                        <state key="normal" image="Images/SearchPanel/SPMyLocation.png">
                                             <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -117,7 +117,7 @@
                                         <rect key="frame" x="271" y="67" width="44" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <state key="normal" image="MyLocation.png">
+                                        <state key="normal" image="Images/SearchPanel/SPMyLocation.png">
                                             <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
@@ -194,7 +194,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="hmS-dC-JVN">
-                        <barButtonItem key="rightBarButtonItem" image="SearchImg.png" id="Dwx-k2-M2a">
+                        <barButtonItem key="rightBarButtonItem" image="Images/NavigationBar/NBSearch.png" id="Dwx-k2-M2a">
                             <connections>
                                 <action selector="searchBarButtonClicked:" destination="R2K-lh-zEE" id="lUh-a4-YUx"/>
                             </connections>
@@ -221,9 +221,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="MyLocation.png" width="21" height="21"/>
-        <image name="SearchButtonBg.png" width="148" height="44"/>
-        <image name="SearchImg.png" width="32" height="32"/>
+        <image name="Images/NavigationBar/NBSearch.png" width="16" height="16"/>
+        <image name="Images/SearchPanel/SPButtonBg.png" width="16" height="16"/>
+        <image name="Images/SearchPanel/SPMyLocation.png" width="16" height="16"/>
     </resources>
     <classes>
         <class className="MapController" superclassName="UIViewController">
